--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribuidos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_distribuidos.cshtml
@@ -27,8 +27,8 @@
         settings.Columns.Add("IdUnidadMedida", "Unidad medida").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "can_total";
-            column.Caption = "total";
+            column.FieldName = "dm_cantidad";
+            column.Caption = "Cantidad";
             column.Width = Unit.Percentage(10);
 
         });
