--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/TransferenciasInventario/Modificar.cshtml
@@ -129,7 +129,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    @*@Html.Action("GridViewPartial_inv_det")*@
+                    @Html.Action("GridViewPartial_transferencias_det")
                 </div>
             </div>
         </div>
