--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@model Core.Erp.Info.RRHH.ro_Nomina_Tipoliqui_Info
 @{
     ViewBag.Title = "Tipo liquidación de nómina";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @Html.Action("GridViewPartial_nomina_tipo_liquidacion");
