--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PagoBenediciosSociales/Modificar.cshtml
@@ -1,6 +1,11 @@
 ﻿@model Core.Erp.Info.RRHH.ro_rol_Info
 @{
     ViewBag.Title = "Modificar";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Modificar", "PagoBenediciosSociales", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
