--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParticipacionUtilidad/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParticipacionUtilidad/Anular.cshtml
@@ -3,6 +3,11 @@
 
 @{
     ViewBag.Title = "Anular";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Anular", "ParticipacionUtilidad", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
