--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Generar_Periodos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Generar_Periodos.cshtml
@@ -1,6 +1,11 @@
 ﻿@model Core.Erp.Info.RRHH.ro_periodo_Info
 @{
     ViewBag.Title = "Generar Período";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Generar_Periodos", "Periodo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
