--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Nuevo.cshtml
@@ -2,6 +2,11 @@
 
 @{
     ViewBag.Title = "Nuevo rubro";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm("Nuevo", "Rubro", FormMethod.Post, new { @class = "form", @role = "form" }))
