--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Nuevo.cshtml
@@ -2,6 +2,11 @@
 
 @{
     ViewBag.Title = "Configuración rubros calculados";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
