--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoPrestamo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/TipoPrestamo/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿
 @{
     ViewBag.Title = "Tipo prestamos";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm())
