--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Nuevo.cshtml
@@ -2,6 +2,11 @@
 
 @{
     ViewBag.Title = "Nuevo turno";
+    if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
+    {
+        Response.Redirect("~/Account/Login");
+    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm("Nuevo", "Turno", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
