--- a/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/_GridViewPartial_tipomovimientocaja.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/TipoMovimientoCaja/_GridViewPartial_tipomovimientocaja.cshtml
@@ -75,8 +75,10 @@
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdTipoMovi", "Id").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-        settings.Columns.Add("tm_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(70);
+        settings.Columns.Add("IdTipoMovi", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("tm_Signo", "Signo").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("tm_descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(40);
+        settings.Columns.Add("IdCtaCble", "Cta. Cble").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("Estado", "Estado").Width = System.Web.UI.WebControls.Unit.Percentage(10);
     });
 }
