--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -76,16 +76,16 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(100);
+            c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("IdCbteCble_Ogiro", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("info_proveedor.info_persona.pe_cedulaRuc", "Cédula").Width = Unit.Percentage(10);
+        settings.Columns.Add("co_factura", "Documento").Width = Unit.Percentage(10);
         settings.Columns.Add("info_proveedor.info_persona.pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
+        settings.Columns.Add("co_observacion", "Observación").Width = Unit.Percentage(35);
         settings.Columns.Add(column =>
         {
             column.FieldName = "co_fechaOg";
             column.Caption = "Fecha";
-            column.Width = Unit.Percentage(15);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
@@ -93,65 +93,7 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add("co_serie", "Serie").Width = Unit.Percentage(5);
-        settings.Columns.Add("co_factura", "Documento").Width = Unit.Percentage(10);
-        // settings.Columns.Add("co_observacion", "Observción").Width = Unit.Percentage(10);
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "co_subtotal_iva";
-            column.Caption = "$Base iva";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "co_valoriva";
-            column.Caption = "$Iva";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "co_subtotal_siniva";
-            column.Caption = "$Base 0";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "co_baseImponible";
-            column.Caption = "$Base imp.";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
-        });
+      
 
         //settings.Columns.Add(column =>
         //{
