--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Nuevo.cshtml
@@ -27,78 +27,10 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
-               {
-                   settings.Name = "IdSucursal";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {3}";
-                   settings.Properties.Columns.Add("IdSucursal", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("codigo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Su_CodigoEstablecimiento", "Establecimiento").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Su_Descripcion", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(70);
-
-
-                   //Campo ID
-                   settings.Properties.ValueField = "IdSucursal";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "Su_Descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_sucursales).GetHtml()
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdProveedor">Proveedor*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdProveedor, settings =>
-               {
-                   settings.Name = "IdProveedor";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdProveedor", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("info_persona.pe_nombreCompleto", "Proveedor").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   settings.Properties.Columns.Add("info_persona.pe_cedulaRuc", "Cédula").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.CallbackPageSize = 10;
-                   //Campo ID
-                   settings.Properties.ValueField = "IdProveedor";
-                   settings.Properties.ValueType = typeof(decimal);
-                   settings.Properties.TextField = "info_persona.pe_nombreCompleto";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_proveedores).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-        </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdOrden_giro_Tipo">Sustento tributario*</label>
-                    @Html.DropDownListFor(q => q.IdOrden_giro_Tipo, new SelectList(ViewBag.lst_codigos_sri, "codigoSRI", "co_descripcion"), new { @class = "form-control",@id= "cmb_idtCredito" })
-                    @Html.ValidationMessageFor(q => q.IdOrden_giro_Tipo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdOrden_giro_Tipo">Tipo documento*</label>
-                    @Html.DropDownListFor(q => q.IdOrden_giro_Tipo, new SelectList(ViewBag.lst_tipo_doc, "CodTipoDocumento", "Descripcion"), new { @class = "form-control", @id = "cmbTipoDocu" })
-                    @Html.ValidationMessageFor(q => q.IdOrden_giro_Tipo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-   
-    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdTipoServicio">Tipo de servicio</label>
@@ -111,10 +43,9 @@
                     @Html.ValidationMessageFor(q => q.IdTipoServicio, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="co_FechaFactura">Fecha documentos*</label>
+                    <label for="co_FechaFactura">Fecha*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -136,20 +67,77 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label for="cp_es_comprobante_electronico"></label>
-                        <div class="form-group">
-                            @Html.DevExpress().CheckBoxFor(q => q.cp_es_comprobante_electronico, settings =>
-                       {
-                           settings.Name = "cp_es_comprobante_electronico";
-                           settings.Text = "Comprobante electronico";
-                       }).GetHtml()
+                    <label for="IdProveedor">Proveedor*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdProveedor, settings =>
+               {
+                   settings.Name = "IdProveedor";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdProveedor", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("info_persona.pe_nombreCompleto", "Proveedor").Width = System.Web.UI.WebControls.Unit.Percentage(60);
+                   settings.Properties.Columns.Add("info_persona.pe_cedulaRuc", "Cédula").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                   settings.Properties.CallbackPageSize = 10;
+                   //Campo ID
+                   settings.Properties.ValueField = "IdProveedor";
+                   settings.Properties.ValueType = typeof(decimal);
+                   settings.Properties.TextField = "info_persona.pe_nombreCompleto";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+               }).BindList(ViewBag.lst_proveedores).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="co_plazo">Plazo*</label>
+                    @Html.TextBoxFor(q => q.co_plazo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.co_plazo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <label for="co_FechaFactura_vct">Fecha vencimiento*</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            @Html.TextBoxFor(q => q.co_FechaFactura_vct, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "co_FechaFactura_vct" })
+                            @Html.ValidationMessageFor(q => q.co_FechaFactura_vct, "", new { @class = "text-danger" })
                         </div>
+                    </div>
+                </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdOrden_giro_Tipo">Sustento tributario*</label>
+                    @Html.DropDownListFor(q => q.IdOrden_giro_Tipo, new SelectList(ViewBag.lst_codigos_sri, "codigoSRI", "co_descripcion"), new { @class = "form-control", @id = "cmb_idtCredito" })
+                    @Html.ValidationMessageFor(q => q.IdOrden_giro_Tipo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdOrden_giro_Tipo">Tipo documento*</label>
+                    @Html.DropDownListFor(q => q.IdOrden_giro_Tipo, new SelectList(ViewBag.lst_tipo_doc, "CodTipoDocumento", "Descripcion"), new { @class = "form-control", @id = "cmbTipoDocu" })
+                    @Html.ValidationMessageFor(q => q.IdOrden_giro_Tipo, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-2">
@@ -159,17 +147,16 @@
                     @Html.ValidationMessageFor(q => q.co_serie, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="co_factura">Numero documento*</label>
-                    @Html.TextBoxFor(q => q.co_factura, new { @class = "form-control" })
+                    <label for="co_factura">Número documento*</label>
+                    @Html.TextBoxFor(q => q.co_factura, new { @class = "form-control", @id = "co_factura" })
                     @Html.ValidationMessageFor(q => q.co_factura, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="co_factura">Numero autorización*</label>
+                    <label for="co_factura">Número autorización*</label>
                     @Html.TextBoxFor(q => q.Num_Autorizacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.Num_Autorizacion, "", new { @class = "text-danger" })
                 </div>
@@ -181,7 +168,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="co_observacion">Observación*</label>
-                    @Html.TextBoxFor(q => q.co_observacion, new { @class = "form-control" ,@id="observacion"})
+                    @Html.TextBoxFor(q => q.co_observacion, new { @class = "form-control", @id = "observacion" })
                     @Html.ValidationMessageFor(q => q.co_observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -225,7 +212,7 @@
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="co_valoriva">Iva</label>
-                                @Html.TextBoxFor(q => q.co_valoriva, new { @class = "form-control",@id= "co_valoriva"})
+                                @Html.TextBoxFor(q => q.co_valoriva, new { @class = "form-control", @id = "co_valoriva" })
                                 @Html.ValidationMessageFor(q => q.co_valoriva, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -279,7 +266,7 @@
                                 @Html.ValidationMessageFor(q => q.ptoEmi_a_Modificar, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                        
+
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label for="num_docu_Modificar">Numero documento*</label>
@@ -299,7 +286,7 @@
 
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_informacion_pago">
-               
+
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
@@ -345,10 +332,10 @@
                                //setting.Properties.TextField = "PagoLocExt";
 
                            }).GetHtml()
-                            @Html.ValidationMessageFor(q => q.PagoLocExt, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(q => q.PagoLocExt, "", new { @class = "text-danger" })
                             </div>
                         </div>
-                       
+
 
                     </div>
                 </div>
@@ -381,36 +368,36 @@
 
                 </div>
                 <div class="row">
-                        <div class="col-md-12">
+                    <div class="col-md-12">
+                        <div class="form-group">
                             <div class="form-group">
-                                <div class="form-group">
-                                    <label for="descuento_mensual"></label>
-                                    @Html.DevExpress().CheckBoxFor(q => q.ConvenioTributacion, settings =>
-                               {
-                                   settings.Name = "ConvenioTributacion";
-                                   settings.Text = "¿Aplica convenio de doble tributación?";
+                                <label for="descuento_mensual"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.ConvenioTributacion, settings =>
+                           {
+                               settings.Name = "ConvenioTributacion";
+                               settings.Text = "¿Aplica convenio de doble tributación?";
 
-                               }).GetHtml()
-                                </div>
+                           }).GetHtml()
                             </div>
                         </div>
                     </div>
-                <div class="row">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <div class="form-group">
-                                    <label for="descuento_mensual"></label>
-                                    @Html.DevExpress().CheckBoxFor(q => q.PagoSujetoRetencion, settings =>
-                               {
-                                   settings.Name = "PagoSujetoRetencion";
-                                   settings.Text = "¿Pago sujeto a retención en aplicación en la norma legal?";
-                               }).GetHtml()
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <div class="form-group">
+                                <label for="descuento_mensual"></label>
+                                @Html.DevExpress().CheckBoxFor(q => q.PagoSujetoRetencion, settings =>
+                           {
+                               settings.Name = "PagoSujetoRetencion";
+                               settings.Text = "¿Pago sujeto a retención en aplicación en la norma legal?";
+                           }).GetHtml()
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_detalle_cuotas">
                 <div class="row">
                     <div class="col-md-12">
@@ -466,13 +453,13 @@
             </div>
         </div>
     </div>
-        <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            <a class="btn btn-default" href="@Url.Action("Index","Deudas",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
-        </div>
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index","Deudas",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
+    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
 <script>
 
@@ -506,6 +493,11 @@
         actualizar_valores();
         armar_diario();
     });
+
+
+    $("#co_factura").change(function () {
+        rellenar_ceros_izquierda();
+    });
     $("#cmb_idtCredito").change(function () {
         if (IdProveedor.GetValue() == 0) {
             alert("Seleccione el proveedor");
@@ -515,7 +507,7 @@
         get_list_tipo_doc();
     });
 
-    
+
     function actualizar_valores() {
         var base_iva = $("#co_subtotal_iva").val();
         var base_cero = $("#co_subtotal_siniva").val();
@@ -548,6 +540,15 @@
     $("#Total_a_pagar").keyup(function () {
         get_cuotas();
     });
+
+    function rellenar_ceros_izquierda() {
+        var str = "" + Number($("#co_factura").val());
+        var pad = "000000000";
+        var doc = pad.substring(0, pad.length - str.length) + str;
+
+        $("#co_factura").val(doc);
+    }
+
     // calcular cuotas
     function get_cuotas()
     {
@@ -586,8 +587,8 @@
   // obtener tipo de documento
     function get_list_tipo_doc() {
 
-    
-       
+
+
         if (IdProveedor.GetValue() > 0 && $("#cmb_idtCredito").val() != "") {
             var datos = {
                 IdProveedor:  IdProveedor.GetValue(),
@@ -618,10 +619,10 @@
 
     function armar_diario() {
 
-       
 
-       
-      
+
+
+
             var datos = {
             IdProveedor :  IdProveedor.GetValue(),
             co_subtotal_iva : $("#co_subtotal_iva").val(),
@@ -645,8 +646,8 @@
                 error: function (error) {
                 }
             });
-        
+
     };
 
-    
+
 </script>
