--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/Nuevo.cshtml
@@ -39,7 +39,7 @@
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","IngresoInventario",new { Area = "Inventario" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","DistribucionPorLote",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
