--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DistribucionPorLote/_GridViewPartial_por_distribuir.cshtml
@@ -45,23 +45,55 @@
 
         });
 
-
-
         settings.Columns.Add(column =>
         {
-            column.Caption = "Distribuir";
-            column.Width = Unit.Percentage(5);
-
-            column.EditorProperties().ButtonEdit(sp =>
+            column.FieldName = "";
+            column.UnboundType = DevExpress.Data.UnboundColumnType.String;
+            column.SetDataItemTemplateContent(c =>
             {
-                
-                sp.Width = Unit.Percentage(100);
-                sp.ClientSideEvents.ButtonClick = "function(s,e,){buscar()}";
+                Html.DevExpress().Button(settingsBtn =>
+                {
+                    settingsBtn.Name = "btn" + c.KeyValue;
+                    settingsBtn.Text = "Asignar";
+                    settingsBtn.ClientSideEvents.Click = "function(s, e) {buscar('"+1+"');}";
+                  
 
+                }).Render();
             });
         });
+
+
+
     });
 }
 @grid.Bind(Model).GetHtml()
 
 
+<div class="modal fade" id="detalle_distr" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Detalle</h4>
+            </div>
+            <div class="modal-body">
+                @Html.Action("GridViewPartial_distribucion_det")
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="AddFacturas();">Aceptar</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<script type="text/javascript">
+    function buscar() {
+        GridViewPartial_distribucion_det.PerformCallback(1);
+        GridViewPartial_distribucion_det.UnselectRows();
+        $("#detalle_distr").modal("show");
+    }
+</script>   
