--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -390,7 +390,7 @@
                 </div>
                 <hr />
                 <div class="form-group">
-                    <label for="Total_Ing">Ingresos</label>
+                    <label for="Total_Ing">Diferencia ingresos</label>
                     @Html.TextBoxFor(q => q.Total_Ing, new { @id = "Total_IngR", @class = "form-control", @readonly = "readonly" })
                 </div>
             </div>
